Added: todo removing experiments

--- a/TodoExperiments.ipynb
+++ b/TodoExperiments.ipynb
@@ -236,14 +236,38 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "from completeRun import featureRemoving\n",
+    "from LocalDatasets import DoneFeatureMan,readDict\n",
+    "func = 'FeatureRemoveImportant'\n",
+    "amountList = [0.1,0.5,0.9]\n",
+    "clfName = 'SVC-rbf'\n",
+    "didList = DoneFeatureMan(func,clfName,amountList)\n",
+    "typ = 1\n",
+    "cv = 10\n",
+    "for did in didList:\n",
+    "    for amount in amountList:\n",
+    "        featureRemoving(did,cv,round(amount*(readDict(did)['NumberOfFeatures']-1)),typ)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from completeRun import featureRemoving\n",
+    "from LocalDatasets import DoneFeatureMan,readDict\n",
+    "func = 'FeatureRemoveImportant'\n",
+    "amountList = [0.1,0.5,0.9]\n",
+    "clfName = 'SVC-rbf'\n",
+    "didList = DoneFeatureMan(func,clfName,amountList)\n",
+    "typ = 2\n",
+    "cv = 10\n",
+    "for did in didList:\n",
+    "    for amount in amountList:\n",
+    "        featureRemoving(did,cv,round(amount*(readDict(did)['NumberOfFeatures']-1)),typ)"
+   ]
   }
  ],
  "metadata": {
